Fixed spacing above header on 2nd, 3rd, etc blog posts on the index page

--- a/css/main.css
+++ b/css/main.css
@@ -97,3 +97,8 @@ em {
   font-style: normal;
   font-family: 'Advent Pro', sans-serif;
 }
+
+/* Affects all but the first blog post title in the index page */
+.span8 h3 ~ h3, .recent_posts h3 {
+  margin-top: 1.5em;
+}
